--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 .state--selected text {
   fill: white;
 }
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
 </style>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
