--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script type="text/javascript" src="jquery.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="http://d3js.org/queue.v1.min.js"></script>
+<script src="d3.min.js"></script>
+<!-- <script src="http://d3js.org/topojson.v1.min.js"></script> -->
+<!-- <script src="http://d3js.org/queue.v1.min.js"></script> -->
 
 <div id = "menu" class = "col-md-6 col-sm-12">
 <h1> State: </h1> <strong id = "stateLabel"> </strong>
