Updated readme with some ideas

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ body {
 
 <div id = "menu" class = "col-md-6 col-sm-12">
 <h1> Farmer's Markets in the U.S. </h1>
-<p> Click on a state to see its path through the different metrics. </p>
+<p> Hover over map or chart to see the state's path through different metrics. </p>
+<p> Click to keep highlighted for comparisons. </p>
 </div>
 
 <div id = "viz" class = "col-md-6 col-sm-12"></div>
