--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<style>
-
-body {
-  font-family: optima;
-}
-.state rect {
-  /*fill: #dedede;*/
-}
-.state text {
-  font: 12px sans-serif;
-  text-anchor: middle;
-  pointer-events: none;
-}
-.state--selected rect {
-  /*fill: #9f4a6c;*/
-}
-.state--selected text {
-  fill: white;
-}
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    shape-rendering: crispEdges;
-}
-
-.axis text {
-    font-family: sans-serif;
-    font-size: 11px;
-}
-</style>
+<link href="css/style.css" rel = "stylesheet">
 
 <script type="text/javascript" src="jquery.min.js"></script>
 <script src="d3.min.js"></script>
@@ -45,6 +14,9 @@ body {
 <h1> Farmer's Markets in the U.S. </h1>
 <p> Hover over map or chart to see the state's path through different metrics. </p>
 <p> Click to keep highlighted for comparisons. </p>
+<!-- <p> Select to see some pre-choosen groupings:
+  <strong id = "newEngland" class = "normal"> New England </strong> |
+  <strong id = "outliers" class = "normal"> Outliers </strong> -->
 </div>
 
 <div id = "viz" class = "col-md-6 col-sm-12"></div>
