--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <!-- <script src="http://d3js.org/queue.v1.min.js"></script> -->
 
 <div id = "menu" class = "col-md-6 col-sm-12">
-<h1>Farmers Markets by State</h1>
+<h1>Farmer's Markets by State</h1>
 <p> As an avid proponent of farmer's markets I wanted to see if I could visualize
     how different states compared in their farmer's market landscapes. </p>
     <p> Companion visualization available <a href = "http://nickstrayer.me/farmersMarkets">here</a>. Market data from
         <a href = "http://catalog.data.gov/dataset/farmers-markets-geographic-data"> data.gov </a> and census data from
         <a href = "https://www.census.gov/popest/data/state/totals/2014/tables/NST-EST2014-01.csv">the census bureau.</a>
-<p> Hover over map or chart to see the state's path through different metrics.
+<p> Hover over the map or chart to see the state's path through different metrics.
     Click to keep highlighted for comparisons. I have preselected a few interesting groupings,
     but please explore your own and let me know anything interesting you find!</p>
 <!-- <p> Select to see some pre-choosen groupings:
