Updated some stuff in the text

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <h1>Farmer's Markets by State</h1>
 <p> As an avid proponent of farmer's markets I wanted to see if I could visualize
     how different states compared in their farmer's market landscapes. </p>
-    <p> Companion visualization available <a href = "http://nickstrayer.me/farmersMarkets">here</a>. Market data from
-        <a href = "http://catalog.data.gov/dataset/farmers-markets-geographic-data"> data.gov </a> and census data from
-        <a href = "https://www.census.gov/popest/data/state/totals/2014/tables/NST-EST2014-01.csv">the census bureau.</a>
+    <p> Companion visualization available <a href = "http://nickstrayer.me/farmersMarkets">here</a>. Resources:
+        <a href = "http://catalog.data.gov/dataset/farmers-markets-geographic-data">Market data from</a>,
+        <a href = "https://www.census.gov/popest/data/state/totals/2014/tables/NST-EST2014-01.csv">census data, </a>
+        <a href = "http://www.github.com/nstrayer/marketViz">Github repo.</a>
 <p> Hover over the map or chart to see the state's path through different metrics.
     Click to keep highlighted for comparisons. I have preselected a few interesting groupings,
-    but please explore your own and let me know anything interesting you find!</p>
+    but please explore your own and <a href = "http://www.twitter.com/nicholasstrayer">let me know</a> anything interesting you find!</p>
 <!-- <p> Select to see some pre-choosen groupings:
   <strong id = "newEngland" class = "normal"> New England </strong> |
   <strong id = "outliers" class = "normal"> Outliers </strong> -->
