--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <h1>Farmer's Markets by State</h1>
 <p> As an avid proponent of farmer's markets I wanted to see if I could visualize
     how different states compared in their farmer's market landscapes. </p>
-    <p> Companion visualization available <a href = "http://nickstrayer.me/farmersMarkets">here</a>. Resources:
+    <p>Special thanks to <a href = "https://twitter.com/donniecoleman">Donnie Coleman</a> for helping out with the code!
+        Companion visualization available <a href = "http://nickstrayer.me/farmersMarkets">here</a>. Resources:
         <a href = "http://catalog.data.gov/dataset/farmers-markets-geographic-data">market data</a>,
-        <a href = "https://www.census.gov/popest/data/state/totals/2014/tables/NST-EST2014-01.csv">census data</a>, 
+        <a href = "https://www.census.gov/popest/data/state/totals/2014/tables/NST-EST2014-01.csv">census data</a>,
         <a href = "http://www.github.com/nstrayer/marketViz">Github repo.</a>
 <p> Hover over the map or chart to see the state's path through different metrics.
     Click to keep highlighted for comparisons. I have preselected a few interesting groupings,
